--- a/public/css/index.css
+++ b/public/css/index.css
@@ -213,3 +213,51 @@ h2 {
     from {opacity: 0.4;}
     to {opacity: 1;}
 }
+
+@media (min-width: 1281px) {
+    body {
+        background-color: red;
+    }
+
+    #image {
+        content: url('image-large.jpg');
+    }
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+    body {
+        background-color: green;
+    }
+
+    #image {
+        content: url('image-medium.jpg');
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    body {
+        background-color: blue;
+    }
+
+    #image {
+        content: url('image-small.jpg');
+    }
+}
+
+@media (max-width: 767px) {
+    body {
+        background-color: yellow;
+    }
+
+    #image {
+        content: url('image-mobile.jpg');
+    }
+
+    h1 {
+        font-size: 1.8em;
+    }
+
+    p {
+        font-size: 1em;
+    }
+}
