--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -283,11 +283,15 @@ footer {
 
 /* MEDIA QUERIES */
 
+/*pantallas grandes >1280px*/
+
 @media (min-width: 1281px) {
     body {
         background-color: aqua;
     }
 }
+
+/*pantallas medianas 1025px a 1280px*/
 
 @media (min-width: 1025px) and (max-width: 1280px) {
     body {
@@ -352,6 +356,8 @@ footer {
         height: auto;
     }
 }
+
+/*pantalla tablet 768px a 1024px*/
 
 @media (min-width: 768px) and (max-width: 1024px) {
     body {
@@ -427,6 +433,8 @@ footer {
         font-size: 1rem;
     }
 }
+
+/*pantalla movil hasta 767px*/
 
 @media (max-width: 767px) {
     body {
